<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".bundleintent.GetBundleActivity">

    <TextView
        android:hint="Seu login"
        android:id="@+id/loginBundle"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <TextView
        android:hint="Seu email"
        android:id="@+id/emailBundle"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>