<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".bundleintent.GetBundleActivity">

    <EditText
        android:hint="digite seu login"
        android:id="@+id/login"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <EditText
        android:hint="digite seu email"
        android:id="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:text="fazer login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>